Add html+css. no .js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Filip Lis - Recruitment task</title>
+		<link rel="stylesheet" href="./src/css/main.css" type="text/css">
+
 </head>
 <body>
+
+	<div id="container">
+
+		<div id="page">
+			<div id="image"></div>
+				<div id="content">
+					<div id="title"><H1>Lorem Ipsum</H1></div>
+					<div id="copy">
+						<p>
+							Infinitely scalable, feature-rich and cloud-native data
+							management and protection for modern and legacy
+							infrastructures and SaaS platforms, managed via a
+							single app with no hardware required.
+						</p>
+					</div>
+					<div id="bottom">
+						<button id="button">Button</button>
+					</div>
+				</div>
+		</div>
+	</div>
 
 </body>
