--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 	<body>
 		<div id="container">
 			<div id="page">
-				<div id="image"></div>
+				<div id="image">
+					<!-- <img src="../../images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_538.jpg"></img> -->
+				</div>
 				<div id="content">
 					<div id="title"><h1>Lorem Ipsum</h1></div>
 					<div id="text">
@@ -32,12 +34,13 @@
 					<div class="modal-content">
 						<span class="close">&times;</span>
 						<div id="alert">Alert!</div>
-						<div id="modal-main-text">
+							<div id="modal-main-text">
 							<span class="counter-text">You have clicked</span>
 							<span id="counter" style="font-weight: bold"></span>
 							<span class="counter-text2"><b>times</b> to related button.</span>
+							<span><button id="reset-button">Reset</button></span>
 						</div>
-						<div id="reset"><button id="resetButton">Reset</button></div>
+						
 					</div>
 				</div>
 			</div>
