add responsive div image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div id="container">
 			<div id="page">
 				<div id="image">
+					<!-- <img src="/images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" /> -->
 				</div>
 				<div id="content">
 					<div id="title"><h1>Lorem Ipsum</h1></div>
