--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<button-component></button-component>
 					</div>
 				</div>
-				<!-- <div id="myModal" class="modal">
+				<div id="myModal" class="modal">
 					<div id="modal-content">
 						<span id="close">&times;</span>
 						<div id="alert">Alert!</div>
@@ -41,7 +41,7 @@
 							<span><button id="reset-button">Reset</button></span>
 						</div>
 					</div>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</body>
