--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 		<div id="container">
 			<div id="page">
 				<div id="image">
-					<!-- <img src="/images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" /> -->
+					<img id="sunrise"
+						srcset="
+							./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg,
+							./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1002.jpg 1.5x,
+							./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg 2x"					
+						src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
+						alt="Sunrise over the beach"
+					/>
 				</div>
 				<div id="content">
 					<div id="title"><h1>Lorem Ipsum</h1></div>
@@ -34,7 +41,7 @@
 					<div id="modal-content">
 						<span id="close">&times;</span>
 						<div id="alert">Alert!</div>
-							<div id="modal-main-text">
+						<div id="modal-main-text">
 							<span>You have clicked</span>
 							<span id="counter" style="font-weight: bold"></span>
 							<span><b>times</b> to related button.</span>
