--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					/>
 				</div>
 				<div id="content">
-					<div id="title"><h1>Lorem Ipsum!</h1></div>
+					<div id="title"><h1>Lorem Ipsum</h1></div>
 					<div id="text">
 						<p>
 							Infinitely scalable, feature-rich and cloud-native data management
