update 1.06 - reusable in css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 		<script src="src/js/main.js" defer></script>
 	</head>
 	<body>
-		<div id="container">
-			<div id="page">
-				<div id="image">
+		<div class="container">
+			<div class="page">
+				<div>
 					<img
-						id="sunrise"
+						class="sunrise"
 						srcset="
 							./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_480.jpg,
 							./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1002.jpg 1.5x,
@@ -26,9 +26,9 @@
 						alt="Sunrise over the beach"
 					/>
 				</div>
-				<div id="content">
-					<div id="title"><h1>Lorem Ipsum</h1></div>
-					<div id="text">
+				<div class="content">
+					<div class="title"><h1>Lorem Ipsum</h1></div>
+					<div class="text">
 						<p>
 							Infinitely scalable, feature-rich and cloud-native data management
 							and protection for modern and legacy infrastructures and SaaS
@@ -40,10 +40,10 @@
 					</div>
 				</div>
 				<div id="myModal" class="modal">
-					<div id="modal-content">
+					<div class="modal-content">
 						<span id="close">&times;</span>
-						<div id="alert">Alert!</div>
-						<div id="modal-main-text">
+						<div class="alert">Alert!</div>
+						<div class="modal-main-text">
 							<p>You have clicked <span id="counter" style="font-weight: bold"></span> <b>times</b> to related button.</span></p>
 							<span><button id="reset-button">Reset</button>
 							
