--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
+		<meta name="description" content="Recruitment task - Gravity">
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -44,13 +45,8 @@
 						<span id="close">&times;</span>
 						<div class="alert">Alert!</div>
 						<div class="modal-main-text">
-							<p>You have clicked <span id="counter" style="font-weight: bold"></span> <b>times</b> to related button.</span></p>
-							<span><button id="reset-button">Reset</button>
-							
-							<!-- <span>You have clicked&nbsp;</span>
-							<span id="counter" style="font-weight: bold"></span>
-							<span><b>&nbsp;times</b> to related button.</span>
-							<span><button id="reset-button">Reset</button></span> -->
+							<p>You have clicked <span id="counter"></span> <b>times</b> to related button.</p>
+							<button id="reset-button">Reset</button>
 						</div>
 					</div>
 				</div>
